--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:title="@string/item1"
         android:id="@+id/item1" />
@@ -11,4 +12,16 @@
     <item
         android:title="@string/item3"
         android:id="@+id/item3"/>
+
+    <item
+        android:title=""
+        android:id="@+id/search"
+        android:icon="@drawable/magnify"
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:title=""
+        android:id="@+id/profile"
+        android:icon="@drawable/profile"
+        app:showAsAction="ifRoom"/>
 </menu>
